--- a/k8s/redis-pvc.yaml
+++ b/k8s/redis-pvc.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: redis-pvc
 spec:
+  storageClassName: azurefile-csi
   accessModes:
     - ReadWriteOnce
   resources:
